Update Day2Part2.java